src/test/ui/object-safety/object-safety-mentions-Self.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:24:5
   |
LL |     t
   |     ^ `Bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-mentions-Self.rs:11:22
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     fn bar(&self, x: &Self);
   |                      ^^^^^ ...because method `bar` references the `Self` type in this parameter
   = help: consider moving `bar` to another trait
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Bar>` for `&T`
   = note: required by cast to type `&dyn Bar`

error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:30:5
   |
LL |     t
   |     ^ `Baz` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-mentions-Self.rs:15:22
   |
LL | trait Baz {
   |       --- this trait cannot be made into an object...
LL |     fn baz(&self) -> Self;
   |                      ^^^^ ...because method `baz` references the `Self` type in its return type
   = help: consider moving `baz` to another trait
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Baz>` for `&T`
   = note: required by cast to type `&dyn Baz`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
